--- a/layout7-1.html
+++ b/layout7-1.html
@@ -48,6 +48,9 @@
         }
          /*화면 너비 0 ~ 480px*/
          @media (max-width : 480px){
+            #content1 .nav{width: 100%; height: 100px; background:#4E85F2 ;}
+            #content1 .article_right1 {width: 100%; height: 200px; background: #4E72F2; }
+            #content1 .article_right2 {width: 100%; height: 200px; background: #4E5DF2;}
             #content3 > article {clear:both; width: 100%; height: 100px; margin: 2%; border-radius: 20px;}
          }
     </style>
