--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
                         <a href="#">blog</a>
                         <a href="#">github</a>
                         <a href="#">youtube</a>
-                    </div>
+                    </div><!-- //header menu -->
+                    <div class="header_tit">
+                        <h1>ProFessional Web Publisher</h1><br>
+                        <a href="http://sis.dothome.co.kr/">I'm Lala</a>
+                    </div><!-- //header_tit -->
+
                 </div>
             </div> 
         </div>
