--- a/res_05_headericonshear.html
+++ b/res_05_headericonshear.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>반응형 포트폴리오:전체메뉴</title>
+    <title>반응형 포트폴리오:아이콘 공유하기</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
@@ -59,7 +59,7 @@
     <!--//스킵 내비게이션-->
     
     <header id="header">
-        <h1 class="ir_su">반응형 사이트</h1>
+        <h1 class="blind">반응형 사이트</h1>
         <div class="container">
             <div class="row">
                 <div class="header">
@@ -90,96 +90,39 @@
             </div> 
         </div>
     </header>   
-    <!-- //header -->
+    <!-- header -->
 
-    <nav >
-        <div class="container">
-            <div class="row">
-                <div class="nav">
-                    <h2 class="ir_su">반응형 사이트 전체 메뉴</h2>
-                    <div>
-                        <h3>HTML Reference</h3>
-                        <ol>
-                            <li><a href="#">HTML 태그(Tag)</a></li>
-                            <li><a href="#">블록 요소/인라인 요소</a></li>
-                            <li><a href="#">DTD 선언</a></li>
-                            <li><a href="#">언어 속성 설정</a></li>
-                            <li><a href="#">HTML &lt;title&gt;</a></li>
-                            <li><a href="#">HTML &lt;meta&gt;</a></li>
-                            <li><a href="#">특수문자</a></li>
-                            <li><a href="#">하이퍼 링크</a></li>
-                            <li><a href="#">HTML &lt;style&gt;</a></li>
-                            <li><a href="#">HTML &lt;html&gt;</a></li>
-                            <li><a href="#">HTML &lt;head&gt;</a></li>
-                            <li><a href="#">HTML &lt;div&gt;</a></li>
-                            <li><a href="#">HTML &lt;colgroup&gt;</a></li>
-                            <li><a href="#">HTML &lt;caption&gt;</a></li>
-                        </ol>
-                    </div>
-                    <div>
-                        <h3>CSS  Reference</h3>
-                        <ol>
-                            <li><a href="#">CSS 선택자</a></li>
-                            <li><a href="#">CSS 단위</a></li>
-                            <li><a href="#">CSS 색상</a></li>
-                            <li><a href="#">CSS 선언 방법</a></li>
-                            <li><a href="#">상대주소와 절대주소</a></li>
-                            <li><a href="#">CSS float</a></li>
-                            <li><a href="#">이미지 표현 방법</a></li>
-                            <li><a href="#">이미지 스프라이트</a></li>
-                            <li><a href="#">IR 효과</a></li>
-                            <li><a href="#">이미지 최적화</a></li>
-                            <li><a href="#">background-color</a></li>
-                            <li><a href="#">border-style</a></li>
-                            <li><a href="#">font-size</a></li>
-                            <li><a href="#">text-align</a></li>
-                        </ol>
-                    </div>
-                    <div class="last">
-                        <h3>Webstandard</h3>
-                        <ol>
-                            <li><a href="#">웹 표준</a></li>
-                            <li><a href="#">웹 접근성</a></li>
-                            <li><a href="#">W3C</a></li>
-                            <li><a href="#">웹 접근성 연구소</a></li>
-                            <li><a href="#">네이버 널리</a></li>
-                            <li><a href="#">다음 다룸</a></li>
-                            <li><a href="#">Webstandard</a></li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </div>        
+    <nav>
+        <h2 class="blind">반응형 사이트 전체 메뉴</h2>
     </nav>
-    <!-- //nav -->
     <article>
-        <h2 class="ir_su">반응형 사이트 서브 타이틀</h2>
+        <h2 class="blind">반응형 사이트 서브 타이틀</h2>
     </article>
     <main>
         <section>
-            <h2 class="ir_su">반응형 사이트 컨텐츠</h2>
+            <h2 class="blind">반응형 사이트 컨텐츠</h2>
             <section>
-                <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠</h3>
-                <article><h4 class="ir_su">반응형 사이트 왼쪽 컨텐츠1</h4></article>
-                <article><h4 class="ir_su">반응형 사이트 왼쪽 컨텐츠2</h4></article>
-                <article><h4 class="ir_su">반응형 사이트 왼쪽 컨텐츠3</h4></article>
+                <h3 class="blind">반응형 사이트 왼쪽 컨텐츠</h3>
+                <article><h4 class="blind">반응형 사이트 왼쪽 컨텐츠1</h4></article>
+                <article><h4 class="blind">반응형 사이트 왼쪽 컨텐츠2</h4></article>
+                <article><h4 class="blind">반응형 사이트 왼쪽 컨텐츠3</h4></article>
             </section>
             <section>
-                <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
-                <article><h4 class="ir_su">반응형 사이트 가운데 컨텐츠1</h4></article>
-                <article><h4 class="ir_su">반응형 사이트 가운데 컨텐츠2</h4></article>
-                <article><h4 class="ir_su">반응형 사이트 가운데 컨텐츠3</h4></article>
+                <h3 class="blind">반응형 사이트 가운데 컨텐츠</h3>
+                <article><h4 class="blind">반응형 사이트 가운데 컨텐츠1</h4></article>
+                <article><h4 class="blind">반응형 사이트 가운데 컨텐츠2</h4></article>
+                <article><h4 class="blind">반응형 사이트 가운데 컨텐츠3</h4></article>
             </section>
             <section>
-                <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠 </h3>
-                <article><h4 class="ir_su">반응형 사이트 왼쪽 컨텐츠1</h4></article>
-                <article><h4 class="ir_su">반응형 사이트 왼쪽 컨텐츠2</h4></article>
-                <article><h4 class="ir_su">반응형 사이트 왼쪽 컨텐츠3</h4></article>
+                <h3 class="blind">반응형 사이트 왼쪽 컨텐츠 </h3>
+                <article><h4 class="blind">반응형 사이트 왼쪽 컨텐츠1</h4></article>
+                <article><h4 class="blind">반응형 사이트 왼쪽 컨텐츠2</h4></article>
+                <article><h4 class="blind">반응형 사이트 왼쪽 컨텐츠3</h4></article>
             </section>
         </section>
     </main>
     <footer>
-        <h2 class="ir_su">반응형 사이트 푸터 </h2>
+        <h2 class="blind">반응형 사이트 푸터 </h2>
     </footer>
     
 
