--- a/res_07_lineeffect.html
+++ b/res_07_lineeffect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>반응형 포트폴리오:헤더 반응형</title>
+    <title>반응형 포트폴리오:라인효과</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
@@ -37,9 +37,7 @@
     <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
 
     <!-- 웹폰트 -->
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 
     <!-- HTML5shiv ie6~8 -->
     <!--[if lt IE 9]> 
@@ -154,16 +152,8 @@
         </div>        
     </nav>
     <!-- //nav -->
-    <article id="title">
-        <div class="container">
-            <div class="title"> <h2 class="ir_su">반응형 사이트 서브 타이틀</h2>
-                <h2>"나는 퍼블리셔다"</h2>
-                <a href="#" class="btn"><i class="fa fa-angle-down" aria-hidden="true"></i>
-                <span class="ir_su">전체메뉴 보기</span>
-                </a>
-            </div>
-        </div>
-       
+    <article>
+        <h2 class="ir_su">반응형 사이트 서브 타이틀</h2>
     </article>
     <main>
         <section>
