--- a/res_08_title.html
+++ b/res_08_title.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>반응형 포트폴리오:헤더 반응형</title>
+    <title>반응형 포트폴리오:타이틀</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
