--- a/res_10_cont_layout.html
+++ b/res_10_cont_layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>반응형 포트폴리오:컨텐츠 타이틀</title>
+    <title>반응형 포트폴리오:컨텐츠 레이아웃</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -224,85 +224,38 @@
           <section id="cont_left">
             <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠</h3>
             <article class="column col1">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 왼쪽 컨텐츠1</h4>
             </article>
-            <!-- //col1 -->
             <article class="column col2">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 왼쪽 컨텐츠2</h4>
             </article>
-            <!-- //col2 -->
-          
             <article class="column col3">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 왼쪽 컨텐츠3</h4>
             </article>
-            <!-- //col3 -->
-          
           </section>
           <section id="cont_center">
             <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
             <article class="column col4">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 가운데 컨텐츠1</h4>
             </article>
-            <!-- //col4 -->
             <article class="column col5">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 가운데 컨텐츠2</h4>
             </article>
-            <!-- //col5 -->
             <article class="column col6">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 가운데 컨텐츠3</h4>
             </article>
-            <!-- //col6 -->
           </section>
           <section id="cont_right">
             <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
             <article class="column col7">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 오른쪽 컨텐츠1</h4>
             </article>
-            <!-- //col7 -->
             <article class="column col8">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 오른쪽 컨텐츠2</h4>
             </article>
-           <!-- //col8 -->
             <article class="column col9">
-              <h4 class="col_tit">Title</h4>
-              <p class="col_desc">이곳은 설명 부분입니다.</p>
-              <!-- -->
-
-              <!-- // -->
+              <h4 >반응형 사이트 오른쪽 컨텐츠3</h4>
             </article>
-            <!-- //col9 -->
           </section>
         </div>
       </section>
