--- a/res_11_cont_left_menu.html
+++ b/res_11_cont_left_menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>반응형 포트폴리오:메뉴 반응형</title>
+    <title>반응형 포트폴리오:컨텐츠 타이틀</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -240,7 +240,6 @@
               <!-- // -->
             </article>
             <!-- //col1 -->
-
             <article class="column col2">
               <h4 class="col_tit">Title</h4>
               <p class="col_desc">이곳은 설명 부분입니다.</p>
