--- a/res_15_notice2.html
+++ b/res_15_notice2.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>반응형 포트폴리오:이미지 슬라이드2</title>
+    <title>반응형 포트폴리오:게시판 두 줄 효과</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/slick.css" />
 
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
@@ -103,7 +102,7 @@
             <!-- //header menu -->
             <div class="header_tit">
               <h1>ProFessional Web Publisher</h1>
-              <br />
+              <br>
               <a href="http://sis.dothome.co.kr/">I'm Lala</a>
             </div>
             <!-- //header_tit -->
@@ -226,48 +225,16 @@
             <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠</h3>
             <article class="column col1">
               <h4 class="col_tit">Menu</h4>
-              <p class="col_desc">
-                box-shadow를 이용한 마우스 오버 효과입니다.
-              </p>
+              <p class="col_desc">box-shadow를 이용한 마우스 오버 효과입니다.</p>
               <!-- 메뉴 -->
               <div class="menu">
                 <ul>
-                  <li>
-                    <a href="#"
-                      >Cafe
-                      <i class="fa fa-angle-double-right" aria-hidden="true"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      >Tutorial
-                      <i class="fa fa-angle-double-right" aria-hidden="true"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      >WebSite
-                      <i class="fa fa-angle-double-right" aria-hidden="true"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      >Reference
-                      <i class="fa fa-angle-double-right" aria-hidden="true"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      >CSS3
-                      <i class="fa fa-angle-double-right" aria-hidden="true"></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="#"
-                      >HTML5
-                      <i class="fa fa-angle-double-right" aria-hidden="true"></i
-                    ></a>
-                  </li>
+                  <li><a href="#">Cafe <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                  <li><a href="#">Tutorial <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                  <li><a href="#">WebSite <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                  <li><a href="#">Reference <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                  <li><a href="#">CSS3 <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                  <li><a href="#">HTML5 <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
                 </ul>
               </div>
               <!-- // -->
@@ -276,149 +243,52 @@
 
             <article class="column col2">
               <h4 class="col_tit">Notice</h4>
-              <p class="col_desc">
-                게시판 영역의 한줄 효과와 두줄 효과 게시판입니다.
-              </p>
+              <p class="col_desc">게시판 영역의 한줄 효과와 두줄 효과 게시판입니다.</p>
               <!-- 게시판1 -->
               <div class="notice1">
                 <h5>Notice1</h5>
                 <ul>
-                  <li>
-                    <a href="#"
-                      >이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      >이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      >이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      >이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a
-                    >
-                  </li>
+                  <li><a href="#">이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                  <li><a href="#">이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                  <li><a href="#">이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                  <li><a href="#">이줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
                 </ul>
-                <a href="#" class="more" title="더 보기"
-                  >More <i class="fa fa-plus-circle" aria-hidden="true"></i
-                ></a>
+                <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle" aria-hidden="true"></i></a>
               </div>
               <!-- //게시판 -->
-              <!-- 게시판1 -->
-              <div class="notice2 mt15">
+               <!-- 게시판1 -->
+               <div class="notice2 mt15">
                 <h5>Notice2</h5>
                 <ul>
-                  <li>
-                    <a href="#"
-                      >이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은
-                      두 줄 효과입니다. 이 줄은 두 줄 효과입니다.이줄은 두 줄
-                      효과입니다. 이 줄은 두 줄 효과입니다. 이줄은 두 줄
-                      효과입니다. 이 줄은 두 줄 효과입니다.</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      >이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은
-                      두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      >이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은
-                      두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      >이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은
-                      두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a
-                    >
-                  </li>
+                  <li><a href="#">이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                  <li><a href="#">이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                  <li><a href="#">이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                  <li><a href="#">이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
                 </ul>
-                <a href="#" class="more" title="더 보기"
-                  >More <i class="fa fa-plus-circle" aria-hidden="true"></i
-                ></a>
+                <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle" aria-hidden="true"></i></a>
               </div>
               <!-- //게시판 -->
             </article>
             <!-- //col2 -->
-
+          
             <article class="column col3">
-              <h4 class="col_tit">Blog</h4>
-              <p class="col_desc">
-                해상도에 따라 이미지를 다르게 표현하는 방법입니다.
-              </p>
-              <!-- blog1 -->
-              <div class="blog1">
-                <h5 class="ir_su">image1</h5>
-                <figure>
-                  <!-- <img src="img/blog1_@1.jpg" class="img-normal" alt="normal_image">
-                    <img src="img/blog1_@2.jpg" class="img-retia" alt="retina_image" width="100%">-->
-                  <img
-                    src="img/blog3_@1.jpg"
-                    srcset="
-                      img/blog3_@1.jpg 1x,
-                      img/blog3_@2.jpg 2x,
-                      img/blog3_@3.jpg 3x
-                    "
-                    alt="normal_image"
-                  />
-                  <figcaption>
-                    반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지
-                    글입니다.
-                  </figcaption>
-                </figure>
-              </div>
-              <!-- //blog1 -->
-              <!-- blog2 -->
-              <div class="blog2 mt15">
-                <h5 class="ir_su">image2</h5>
-                <div class="img-retina">
-                  <h5>image2</h5>
-                </div>
-                <p>
-                  반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지
-                  글입니다.
-                </p>
-              </div>
-              <!-- //blog2 -->
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
             </article>
             <!-- //col3 -->
+          
           </section>
           <section id="cont_center">
             <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
             <article class="column col4">
-              <h4 class="col_tit">Slick Slider</h4>
-              <p class="col_desc">
-                slick.js를 이용한 이미지 슬라이드 효과입니다.
-              </p>
-              <!-- 이미지 슬라이드 -->
-              <div class="slider">
-                <div>
-                  <figure>
-                    <img src="img/slider001.jpg" alt="이미지1" />
-                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지</span></figcaption>
-                  </figure>
-                </div>
-                <div>
-                  <figure>
-                    <img src="img/slider001.jpg" alt="이미지2" />
-                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지</span></figcaption>
-                  </figure>
-                </div>
-                <div>
-                  <figure>
-                    <img src="img/slider001.jpg" alt="이미지3" />
-                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지</span></figcaption>
-                  </figure>
-                </div>
-              </div>
-              <!-- //이미지 슬라이드 -->
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
             </article>
             <!-- //col4 -->
             <article class="column col5">
@@ -455,7 +325,7 @@
 
               <!-- // -->
             </article>
-            <!-- //col8 -->
+           <!-- //col8 -->
             <article class="column col9">
               <h4 class="col_tit">Title</h4>
               <p class="col_desc">이곳은 설명 부분입니다.</p>
@@ -472,7 +342,7 @@
 
     <footer id="footer">
       <div class="container">
-        <h2>반응형 사이트 푸터</h2>
+        <h2 >반응형 사이트 푸터</h2>
       </div>
     </footer>
     <!-- //footer -->
@@ -480,27 +350,11 @@
     <!-- JavaScript Libraries -->
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/modernizr-custom.js"></script>
-    <script src="js/slick.min.js"></script>
     <script>
-      //이미지 슬라이더
-      $(".slider").slick({
-        dots: true,
-        autoplay: true,
-        autoplaySpeed: 3000,
-        arrows: true,
-        responsive: [
-          {
-            breakpoint: 768,
-            settings: {
-              arrows: true,
-              dots: true,
-            },
-          },
-        ],
-      });
-
-      //sns 공유하기
-
+      //http://www.facebook.com/sharer.php?u={페이지 제목}&t={페이지링크}
+      //http://twitter.com/intent/tweet?text={페이지 제목}&url={페이지링크}
+      //https://share.naver.com/web/shareView.nhn?url={페이지링크}&title={페이지 제목}
+      //https://plus.google.com/share?url={페이지링크}&t={페이지 제목}
       $(".facebook").click(function (e) {
         e.preventDefault();
         window.open(
