--- a/res_18_slickslider1.html
+++ b/res_18_slickslider1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>반응형 포트폴리오:이미지 슬라이드2</title>
+    <title>반응형 포트폴리오:이미지 슬라이드1</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css" />
@@ -394,29 +394,12 @@
             <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
             <article class="column col4">
               <h4 class="col_tit">Slick Slider</h4>
-              <p class="col_desc">
-                slick.js를 이용한 이미지 슬라이드 효과입니다.
-              </p>
+              <p class="col_desc">slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
               <!-- 이미지 슬라이드 -->
               <div class="slider">
-                <div>
-                  <figure>
-                    <img src="img/slider001.jpg" alt="이미지1" />
-                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지</span></figcaption>
-                  </figure>
-                </div>
-                <div>
-                  <figure>
-                    <img src="img/slider001.jpg" alt="이미지2" />
-                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지</span></figcaption>
-                  </figure>
-                </div>
-                <div>
-                  <figure>
-                    <img src="img/slider001.jpg" alt="이미지3" />
-                    <figcaption><em>Responsive Site</em><span>슬라이드 플러그인을 이용한 반응형 이미지</span></figcaption>
-                  </figure>
-                </div>
+                <div><img src="img/slider01.jpg" alt="이미지1"></div>
+                <div><img src="img/slider02.jpg" alt="이미지2"></div>
+                <div><img src="img/slider03.jpg" alt="이미지3"></div>
               </div>
               <!-- //이미지 슬라이드 -->
             </article>
@@ -487,20 +470,20 @@
         dots: true,
         autoplay: true,
         autoplaySpeed: 3000,
-        arrows: true,
+        arrows: false,
         responsive: [
           {
             breakpoint: 768,
             settings: {
               arrows: true,
-              dots: true,
+              dots: false,
             },
           },
         ],
       });
 
       //sns 공유하기
-
+      
       $(".facebook").click(function (e) {
         e.preventDefault();
         window.open(
