--- a/res_24_footer.html
+++ b/res_24_footer.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>반응형 포트폴리오:사이드 이펙트2</title>
+  <title>반응형 포트폴리오:푸터</title>
 
   <!-- style -->
   <link rel="stylesheet" href="css/style.css" />
@@ -396,12 +396,9 @@
             <p class="col_desc">CSS의 transform을 이용한 마우스오버 효과입니다.</p>
             <!-- side1 -->
             <div class="side1 mt15">
-              <figure class="front">
+              <figure>
                 <img src="img/side1.jpg" alt="이미지1">
               </figure>
-              <div class="back">
-                <i class="fa fa-heart" aria-hidden="true"></i>
-              </div>
             </div>
             <!-- //side1 -->
           </article>
@@ -411,17 +408,8 @@
             <p class="col_desc">CSS의 transform을 이용한 마우스오버 효과입니다.</p>
             <!-- side2 -->
             <div class="side2 mt15">
-              <figure class="front">
+              <figure>
                 <img src="img/side2.jpg" alt="이미지2">
-                <figcaption>
-                  Hover Effect
-                </figcaption>
-              </figure>
-              <figure class="back">
-                <img src="img/side4.jpg" alt="이미지4">
-                <figcaption>
-                  Hover Effect
-                </figcaption>
               </figure>
             </div>
             <!-- //side2 -->
@@ -475,34 +463,8 @@
   <script src="js/slick.min.js"></script>
   <script src="js/lightgallery.min.js"></script>
   <script>
-    //접기/펼치기
-    $(".btn").click(function(e){
-        e.preventDefault(); //#기능깨줌
-        $(".nav").slideToggle();
-        $(".btn").toggleClass("open")
-        
-        if( $(".btn").hasClass("open") ){
-          //open이 있을 때
-          $(".btn").find("i").attr("class","fa fa-angle-up");
-        } else {
-          //open이 없을 때
-          $(".btn").find("i").attr("class","fa fa-angle-down");
-        }
-    });
-    
-    $(window).resize(function(){
-        let wWidth = $(window).width();
-        if(wWidth > 600){
-          $(".nav").removeAttr("style");
-        }
-    });
-
     //라이트 박스
-    $(".lightbox").lightGallery({
-      autoplay: true,
-      pause: 3000,
-      progressBar: true
-    });
+    $(".lightbox").lightGallery({});
 
     //이미지 슬라이더
     $(".slider").slick({
