--- a/res_26_sideeffect1.html
+++ b/res_26_sideeffect1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>반응형 포트폴리오:사이드 이펙트2</title>
+  <title>반응형 포트폴리오:사이드 이펙트1</title>
 
   <!-- style -->
   <link rel="stylesheet" href="css/style.css" />
@@ -411,17 +411,8 @@
             <p class="col_desc">CSS의 transform을 이용한 마우스오버 효과입니다.</p>
             <!-- side2 -->
             <div class="side2 mt15">
-              <figure class="front">
+              <figure>
                 <img src="img/side2.jpg" alt="이미지2">
-                <figcaption>
-                  Hover Effect
-                </figcaption>
-              </figure>
-              <figure class="back">
-                <img src="img/side4.jpg" alt="이미지4">
-                <figcaption>
-                  Hover Effect
-                </figcaption>
               </figure>
             </div>
             <!-- //side2 -->
