--- a/index.html
+++ b/index.html
@@ -358,16 +358,16 @@
             <p class="col_desc">Background-blend-mode와 mix-blend-mode</p>
             <!-- lightbox -->
             <div class="lightbox square clearfix mt15">
-              <a href="img/light01_s.jpg"><img src="img/light01.jpg" alt="이미지" /><em>blur</em></a>
-              <a href="img/light02_s.jpg"><img src="img/light02.jpg" alt="이미지" /><em>brightness</em></a>
-              <a href="img/light03_s.jpg"><img src="img/light03.jpg" alt="이미지" /><em>contrast</em></a>
-              <a href="img/light04_s.jpg"><img src="img/light04.jpg" alt="이미지" /><em>grayscale</em></a>
-              <a href="img/light05_s.jpg"><img src="img/light05.jpg" alt="이미지" /><em>hur-rotate</em></a>
-              <a href="img/light06_s.jpg"><img src="img/light06.jpg" alt="이미지" /><em>invert</em></a>
-              <a href="img/light07_s.jpg"><img src="img/light07.jpg" alt="이미지" /><em>opacity</em></a>
-              <a href="img/light08_s.jpg"><img src="img/light08.jpg" alt="이미지" /><em>saturate</em></a>
-              <a href="img/light09_s.jpg"><img src="img/light09.jpg" alt="이미지" /><em>sepia</em></a>
-              <a href="img/light10_s.jpg"><img src="img/light10.jpg" alt="이미지" /><em>Mix</em></a>
+              <a href="img/light01_s.jpg"><img src="img/light01.jpg" alt="이미지1" /><em>blur</em></a>
+              <a href="img/light02_s.jpg"><img src="img/light02.jpg" alt="이미지2" /><em>brightness</em></a>
+              <a href="img/light03_s.jpg"><img src="img/light03.jpg" alt="이미지3" /><em>contrast</em></a>
+              <a href="img/light04_s.jpg"><img src="img/light04.jpg" alt="이미지4" /><em>grayscale</em></a>
+              <a href="img/light05_s.jpg"><img src="img/light05.jpg" alt="이미지5" /><em>hur-rotate</em></a>
+              <a href="img/light06_s.jpg"><img src="img/light06.jpg" alt="이미지6" /><em>invert</em></a>
+              <a href="img/light07_s.jpg"><img src="img/light07.jpg" alt="이미지7" /><em>opacity</em></a>
+              <a href="img/light08_s.jpg"><img src="img/light08.jpg" alt="이미지8" /><em>saturate</em></a>
+              <a href="img/light09_s.jpg"><img src="img/light09.jpg" alt="이미지9" /><em>sepia</em></a>
+              <a href="img/light10_s.jpg"><img src="img/light10.jpg" alt="이미지10" /><em>Mix</em></a>
             </div>
 
             <!-- //lightbox -->
@@ -434,6 +434,9 @@
             <div class="side3 mt15">
               <figure>
                 <img src="img/side3.jpg" alt="이미지3">
+                <figcaption>
+                  <h3>Hover<em>Effect</em></h3>
+                </figcaption>
               </figure>
             </div>
             <!-- //side3 -->
@@ -499,6 +502,7 @@
 
     //라이트 박스
     $(".lightbox").lightGallery({
+      thembnail: true,
       autoplay: true,
       pause: 3000,
       progressBar: true
